export interface Person {
  wear(): string;
}
