@startuml

skinparam class {
  backgroundColor lightgoldenrodyellow
  arrowColor darkgoldenrod
  borderColor darkgoldenrod
}

interface Person {
  wear(): string
}

class Woman <PRE> {
  + wear(): string
}

class Shop {
  - person: Person
  constructor(person: Person)
  + wear(): string
}

class ClothingStore <OR> {
  + wear(): string
}

class Jeweller <OR> {
  + wear(): string
}

Person <|.. Woman
Person <|.. Shop
Person <--o Shop

Shop <|-- ClothingStore
Shop <|-- Jeweller

@enduml

' We don't need use non-concrete decorator class (Shop) in client code
' We can add private functions inside concrete decorators
' We can create a wrapper for client logic (with Person type argument)
